# os-launchers

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
os_launchers/: __init__.py  _launchers.py  conversions.py  exceptions.py  type_hints.py
os_launchers/constants/: __init__.py  osx.py  unix_family.py
os_launchers/profiles/unix_family/des/: __init__.py  file_managers.py  terminals.py
src/os_launchers/: __init__.py  _launchers.py  constants.py  exceptions.py
src/os_launchers/constants/: __init__.py  linux.py  windows.py
