[metadata]
name = os_launchers
version = 0.1.0
author = Eastern-Skill7173
description = Collection of cross-platform launchers, simplifying common OS interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eastern-Skill7173/os-launchers

[options]
package_dir =
    =src
packages =
    os_launchers
python_requires = >=3.5
